--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-/* @override 
-	http://webtodlong.com/mennweb/wp-content/themes/spirit-seed/style.css?seed */
-
 /*
-Theme Name: Spirit Seed
+Theme Name: Spirit by SeedThemes
 Description: Super Minimal Starter theme
-Copyright: 2014
+Copyright: 2015
 Version: 0.1.2
 Author: SeedThemes
 Author URI: http://SeedThemes.com
